# sdf_ros

./: CMakeLists.txt  package.xml
launch/: gazebo_launcher.launch  spawn_pillow.launch  spawn_pillow_full.launch  spawn_sdf.launch  start_world.launch
models/my_hexa/: model.config  model.sdf
models/my_hexa/meshes/: Turnigy_5000mAh_4S__battery.STL  brushless_motor.STL  leg_f450.STL  propeller_left_ccw.STL  propeller_right_cw.STL
models/quad_f450/: model.config  model.sdf
models/quad_f450/meshes/: propeller_1_link.stl  propeller_2_link.stl
models/quad_f450_camera/: model.config  model.sdf
models/quad_f450_thermal/: model.config  model.sdf
models/quad_f450_thermal/meshes/: cam_link.STL
